# intelligent-systems-and-technologies-master-1sem

./: pyproject.toml
task1/: task1.csv  task1.ipynb
task2/: task2.ipynb
task3/: task3.ipynb
task4/: task4.ipynb
